[tool.poetry]
name = "backbone-learn"
version = "0.1.0"
description = "A framework for scaling sparse and interpretable supervised and unsupervised ML methods to high-dimensional problems."
authors = ["Vassilis Digalakis Jr. <digalakis@hec.fr>,  Christos Ziakas <chziakas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
l0bnb = "^1.0.0"
odtlearn = {git = "https://github.com/D3M-Research-Group/odtlearn.git"}
seaborn = "^0.13.0"
pulp = "^2.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
